# Plasmod

./: .dockerignore  .env.example  .gitattributes  .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  README-module-update-s3.md  README.md  README.zh-CN.md  RETRIEVAL_B.md  STORAGE_BACKEND.md  canonical-fixed-fields.md  docker-compose.gpu.yml  docker-compose.milvus.yml  docker-compose.test-gpu.yml  docker-compose.test.yml  docker-compose.unified.yml  docker-compose.yml  e HEAD  go.env  go.mod  go.sum  ingest-storage-object-workers.md  project-cognition  pyproject.toml  requirements.txt  工作记录.md
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
configs/: algorithm_baseline.yaml  algorithm_memorybank.yaml  algorithm_zep.yaml  app.yaml  experiment.yaml  graph.yaml  memory_tiering.yaml  retrieval.yaml  storage.yaml
cpp/: CMakeLists.txt  create_test_engine.cpp  tensorrt_bridge.cpp  test_sparse_capi.c
cpp/include/andb/: andb_c_api.h  dense.h  filter.h  merger.h  retrieval.h  segment_index.h  sparse.h  types.h
cpp/include/plasmod/: batch_optimizer.h  dense.h  plasmod_c_api.h  retrieval.h  segment_index.h  sparse.h  types.h
cpp/knowhere/compat/glog/: logging.h
cpp/knowhere/include/knowhere/feder/: DiskANN.h
cpp/python/: bindings.cpp
cpp/retrieval/: batch_optimizer.cpp  dense.cpp  filter.cpp  merger.cpp  retrieval.cpp  segment_index.cpp  sparse.cpp
devdocs/: CLAUDE.md  arrange  index-build-worker-status.md  member-todo-README.md  memorybank  project-introduction-ch  worker-status.md
docs/: 01-project-overview-and-requirements.md  02-system-architecture-and-design.md  03-canonical-data-model-and-memory-lifecycle.md  04-runtime-chains-and-scheduling.md  05-consistency-recovery-and-correctness.md  06-retrieval-query-and-evidence.md  07-governance-collaboration-and-security.md  08-api-schema-and-sdk-reference.md  09-getting-started-and-user-guide.md  10-codebase-interfaces-and-call-paths.md  11-dependencies-build-and-development.md  12-deployment-operations-and-troubleshooting.md  13-extensibility-compatibility-and-evolution.md  14-implementation-status-gaps-and-claim-boundaries.md  15-architecture-decision-records.md  README.md  arch-design.md  code-review.md  contributing.md  member-b-status.md  server-migration.md  tensorrt-implementation.md  v1-scope.md  worker-types-overview.md
docs/00-overview/: capability-map.md  documentation-map.md  positioning-and-boundaries.md  project-overview.md  terminology.md
docs/01-requirements/: README.md  constraints-and-non-goals.md  functional-requirements.md  non-functional-requirements.md  problem-statement.md  requirements-traceability.md  stakeholders-and-use-cases.md
docs/02-concepts-and-design/: README.md  canonical-object-model.md  concurrency-model.md  consistency-model.md  design-overview.md  design-principles.md  event-to-object-model.md  extension-model.md  failure-model.md  query-path-design.md  security-model.md  source-of-truth-model.md  system-architecture.md  write-path-design.md
docs/03-getting-started/: README.md  first-event-and-query.md  install-from-source.md  prerequisites.md  python-sdk-quickstart.md  quickstart.md  run-with-docker.md  stop-reset-and-cleanup.md  verify-installation.md
docs/04-user-guide/: README.md  deletion-and-purge.md  ingest-events.md  manage-agent-state.md  manage-agents-and-sessions.md  manage-artifacts.md  memory-lifecycle.md  query-memories.md  query-relations.md  replay.md  runtime-modes.md  sharing-and-visibility.md  tiered-storage.md  trace-and-provenance.md
docs/05-api-and-reference/: README.md  admin-api.md  api-overview.md  api-versioning.md  authentication.md  binary-and-grpc-transport.md  configuration-reference.md  error-model.md  idempotency.md  internal-api.md  pagination-and-batching.md  public-http-api.md  route-index.md  sdk-reference.md  wal-stream.md
docs/06-codebase/: README.md  architecture-to-code-map.md  bootstrap-and-runtime-wiring.md  component-ownership.md  package-index.md  repository-overview.md  repository-tree.md  source-of-truth-map.md  storage-key-layout.md
docs/07-dependencies/: README.md  badger-integration.md  build-and-link-model.md  dependency-inventory.md  dependency-overview.md  dependency-troubleshooting.md  embedder-providers.md  knowhere-integration.md  licenses-and-attribution.md  native-retrieval-stack.md  s3-minio-integration.md  upgrade-policy.md
docs/08-development/: README.md  build-system.md  coding-conventions.md  common-code-changes.md  contribution-guide.md  local-development.md  logging-and-metrics.md  native-dependencies.md  run-and-debug.md  test-guide.md  troubleshooting.md
docs/09-deployment-and-operations/: README.md  backup-and-restore.md  deployment-modes.md  docker-deployment.md  minio-s3-setup.md  native-deployment.md  observability.md  operations-runbook.md  replay-and-recovery.md  security-hardening.md  storage-configuration.md  troubleshooting.md
docs/10-extensibility/: README.md  add-agent-framework-adapter.md  add-agent-state-type.md  add-canonical-object.md  add-event-type.md  add-evidence-hook.md  add-materializer.md  add-memory-algorithm.md  add-policy-rule.md  add-query-operator.md  add-retrieval-backend.md  add-storage-backend.md  extension-overview.md  schema-and-payload-extension.md
docs/11-evolution-and-status/: README.md  adr-index.md  api-compatibility.md  configuration-deprecation.md  (+7 more)
integration_tests/: canonical_crud_test.go  chain_collab_test.go  chain_main_test.go  chain_query_test.go  dataflow_test.go  healthz_test.go  ingest_query_test.go  integration_test.go  negative_test.go  protocol_test.go  s3_dataflow_test.go  test_retrieval_b.py  topology_test.go
models/: README.md
plasmod_test_env/: .env.example  README_LAYER1_EXPERIMENT.md
scripts/: benchmark.py  benchmark_layer1.py  benchmark_realdata.py  build_cpp.sh  build_embeddings.sh  check_prod_visibility.sh  dev_up.sh  e2e_storage_retrieval_test.py  run_demo.py  run_dev.sh  run_full.sh  seed_mock_data.py  setup_env.sh  sync_upstream_snapshot.sh  test_build.sh
(+2429 files in other folders)
