[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-native-db-workspace"
version = "0.1.0"
description = "Workspace helpers for Agent-Native DB"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["sdk/python"]
testpaths = ["tests"]
